// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileCoordList can build coordinates each time a tile is added 1`] = `
Object {
  "tiles": Array [],
}
`;

exports[`TileCoordList can build coordinates each time a tile is added 2`] = `
Object {
  "tiles": Array [
    "coord-id-9",
  ],
}
`;

exports[`TileCoordList can build coordinates each time an option is changed 1`] = `
Object {
  "tiles": Array [
    "coord-id-10",
  ],
}
`;

exports[`TileCoordList can build coordinates each time an option is changed 2`] = `
Object {
  "tiles": Array [
    "coord-id-10",
  ],
}
`;

exports[`TileCoordList can build coordinates each time an option is changed 3`] = `
Object {
  "tiles": Array [
    "coord-id-10",
  ],
}
`;

exports[`TileCoordList can build coordinates each time the build function is called 1`] = `
Object {
  "tiles": Array [
    "coord-id-11",
  ],
}
`;

exports[`TileCoordList can build coordinates each time the build function is called 2`] = `
Object {
  "tiles": Array [
    "coord-id-11",
  ],
}
`;

exports[`TileCoordList can build coordinates when the builder function is changed 1`] = `
Object {
  "tiles": Array [
    "coord-id-8",
  ],
}
`;

exports[`TileCoordList can build coordinates when the builder function is changed 2`] = `
Array [
  "coord-id-8",
]
`;

exports[`TileCoordList can build coordinates when the list of tiles is changed 1`] = `
Object {
  "tiles": Array [
    "coord-id-4",
  ],
}
`;

exports[`TileCoordList can build coordinates when the list of tiles is changed 2`] = `
Object {
  "tiles": Array [
    "coord-id-5",
  ],
}
`;

exports[`TileCoordList can build coordinates when the list of tiles is changed 3`] = `
Object {
  "tiles": Array [
    "coord-id-5",
    "coord-id-7",
  ],
}
`;

exports[`TileCoordList can build coordinates with the given builder options 1`] = `
Object {
  "tiles": Array [
    "coord-id-3",
  ],
}
`;
